@@ -71,24 +71,36 @@ main(int argc, const char **argv)
     /* initialize progname for run-tim resource finding */
     bu_setprogname(argv[0]);
 
+    /* Archer doesn't handle empty input strings well - scrub the argv */
+    const char **av = (const char **)bu_calloc(argc, sizeof(char *), "argv cpy");
+    int ac = 1;
+    av[0] = argv[0];
+    for (int i = 1; i < argc; i++) {
+	if (strlen(argv[i]) > 0) {
+	    av[ac] = argv[i];
+	    ac++;
+	}
+    }
+
     /* Change the working directory to BU_DIR_HOME if we are invoking
      * without any arguments. */
-    if (argc == 1) {
+    if (ac == 1) {
 	const char *homed = bu_dir(NULL, 0, BU_DIR_HOME, NULL);
 	if (homed && chdir(homed)) {
+	    bu_free(av, "av cpy");
 	    bu_exit(1, "Failed to change working directory to \"%s\" ", homed);
 	}
     }
 
     /* initialize Tcl args */
-    bu_vls_sprintf(&tcl_cmd, "set argv0 %s", argv[0]);
+    bu_vls_sprintf(&tcl_cmd, "set av0 %s", av[0]);
     (void)Tcl_Eval(interp, bu_vls_addr(&tcl_cmd));
     bu_vls_sprintf(&tcl_cmd, "set ::no_bwish 1");
     (void)Tcl_Eval(interp, bu_vls_addr(&tcl_cmd));
 
-    /* Pass on argc/argv - for now, handling all that in Tcl/Tk land */
-    argc--; argv++;
-    tclcad_set_argv(interp, argc, argv);
+    /* Pass on ac/av - for now, handling all that in Tcl/Tk land */
+    ac--; av++;
+    tclcad_set_argv(interp, ac, av);
 
 #ifdef HAVE_WINDOWS_H
     Tk_InitConsoleChannels(interp);
@@ -123,6 +135,8 @@ main(int argc, const char **argv)
     Tcl_DeleteInterp(interp);
 
 #endif /* HAVE_TK */
+
+    bu_free(av, "argv cpy");
 
     return status;
 }
